--- a/package.json
+++ b/package.json
@@ -11,24 +11,31 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "expo": "~45.0.0",
-    "expo-checkbox": "~2.1.0",
-    "expo-image-picker": "~13.1.1",
-    "expo-linear-gradient": "~11.3.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "expo": "^47.0.0",
+    "expo-checkbox": "~2.2.2",
+    "expo-image-picker": "~14.0.2",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-localization": "~14.0.0",
+    "expo-status-bar": "~1.4.2",
+    "i18n-js": "^4.2.2",
+    "i18next": "^22.4.9",
+    "pod-install": "^0.1.38",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-i18next": "^12.1.4",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-picker-select-updated": "^9.0.3",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
