--- a/app.json
+++ b/app.json
@@ -20,7 +20,10 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.elvirashelygan.MyYarn",
-      "buildNumber":"5"
+      "buildNumber":"6",
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "The app needs access to your photo gallery to upload yarn photos to the collection."
+      }
     },
     "android": {
       "package": "com.MyYarn",
@@ -30,6 +33,7 @@
         "backgroundColor": "#FFFFFF"
       }
     },
+ 
     "web": {
       "favicon": "./assets/favicon.png"
     },
